tests/NormalTests/paczka2/big_fuzzy/56512853.err
Error in line 1: 2Cc6D5 A860 50,7
Error in line 12: LtCyHxGaX A671 39,6
Error in line 31: 2Cc6D5 A671 24,8
Error in line 22: lFpgJRgUmtM S323 88,6
Error in line 26: WOp0Mhx A671 48,4
Error in line 33: WFBA A671 64,8
Error in line 44: WFBA A860 60,0
Error in line 65: lFpgJRgUmtM S323 59,9
Error in line 81: WFBA S323 21,0
Error in line 91: lFpgJRgUmtM A860 46,4
Error in line 95: lFpgJRgUmtM A671 20,4
Error in line 108: A860 A701 157,1
Error in line 94: 2Cc6D5 A671 79,9
Error in line 130: WOp0Mhx S323 92,2
Error in line 119: 2Cc6D5 A701 41,0
Error in line 135: LtCyHxGaX S323 33,1
Error in line 143: LtCyHxGaX A701 8,8
Error in line 145: LtCyHxGaX S323 93,1
Error in line 150: WFBA S323 79,2
Error in line 151: WOp0Mhx A701 68,0
Error in line 154: WFBA A860 69,3
Error in line 156: WFBA A701 73,8
Error in line 164: WOp0Mhx A701 89,7
Error in line 165: WOp0Mhx A860 80,1
Error in line 170: lFpgJ~gUmtM A701 88,5
Error in line 169: LtCyHxGaX A671 63,8
Error in line 174: 2Cc6D5 A860 72,8
Error in line 176: WFBA A860 94,8
Error in line 177: WFBA A671 15,4
Error in line 178: WFBA A701 14,4
Error in line 173: LtCyHxGaX A860 80,0
Error in line 192: WOp0Mhx A671 88,3
Error in line 228: A860 A671 30,2
Error in line 229: LtCyHxGaX A671 100,0
Error in line 233: LtCyHxGaX A701 91,6
Error in line 236: 2Cc6D5 A701 76,7
Error in line 240: 2Cc6D5 S323 20,4
Error in line 224: bpB A701 100,4
